# CodeFourChallenge

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data/index/: bm25.pkl
data/index/lancedb/chunks.lance/_transactions/: 0-d69819c9-fcb3-46be-a551-beb547c0e688.txn  1-8fc6e1f6-dde7-4c28-bfab-b7ddd187a795.txn
data/metadata/: VIDEO_MANIFEST.md  video_1.json  video_12.json  video_36.json
tests/: conftest.py  test_audio_analyzer.py  test_audio_utils.py  test_bm25_store.py  test_captioner.py  test_chunker.py  test_classifier.py  test_cli.py  test_compressor.py  test_config.py  test_embedder.py  test_hybrid_retriever.py  test_index_builder.py  test_ingestion.py  test_metadata_writer.py  test_models.py  test_ocr_extractor.py  test_protocols.py  test_reranker.py  test_server.py  test_transcriber.py  test_vector_store.py
videosearch/: __init__.py  audio_analyzer.py  audio_utils.py  bm25_store.py  captioner.py  chunker.py  classifier.py  cli.py  compressor.py  config.py  embedder.py  hybrid_retriever.py  index_builder.py  ingestion.py  metadata_writer.py  models.py  ocr_extractor.py  protocols.py  reranker.py  server.py  transcriber.py  vector_store.py
