[project]
name = "videosearch"
version = "0.1.0"
description = "Natural language search for body-worn camera footage"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "scenedetect[opencv]>=0.6.7",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "paddleocr>=3.4.0",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
