[project]
name = "videosearch"
version = "0.1.0"
description = "Natural language search for body-worn camera footage"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "scenedetect[opencv]>=0.6.7",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "paddleocr>=3.4.0",
    "easyocr>=1.7.2",
    "soundfile>=0.13.1",
    "google-genai>=1.68",
    "lancedb>=0.30.1",
    "rank-bm25>=0.2.2",
    "typer[all]>=0.9.0",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "fastapi>=0.128",
    "uvicorn>=0.40",
]

[project.scripts]
videosearch = "videosearch.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["videosearch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
